fix: don't show codeblock copy button on mobile

--- a/assets/scss/components/code-highlight.scss
+++ b/assets/scss/components/code-highlight.scss
@@ -67,7 +67,7 @@ $ht-code-border-radius: .4em;
     font-size: 1rem;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
     .highlight {
         width: 100%;
     }
